# article-assistant

./: .gitignore  CLAUDE.md  README.md  article_assistant.py  extract_article_metadata.py  pyproject.toml  requirements.txt
tests/: __init__.py  test_content.py  test_extract_article_metadata.py  test_extractors.py  test_functional.py
thoughts/shared/plans/: 2025-09-29-multi-site-llm-metadata-extraction.md
thoughts/shared/research/: 2025-09-29-multi-site-metadata-extraction.md
