[project]
name = "article-assistant"
version = "0.1.0"
description = "Extract metadata from articles and generate Markdown headers for note-taking"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "llm>=0.15.0",
    "pydantic>=2.0.0",
    "markdownify>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.15.6",
]
